Course Instances Validation working
