# swagger.json
@@ -5,7 +5,7 @@
     "description": "API Documentation for Student Enrollment API",
     "version": "1.0.0"
   },
-  "host": "enrollment-system-0o9t.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "tags": [
     {
@@ -30,6 +30,7 @@
     }
   ],
   "schemes": [
+    "http",
     "https"
   ],
   "paths": {
@@ -78,7 +79,10 @@
                 "location": {
                   "example": "any"
                 },
-                "time": {
+                "startTime": {
+                  "example": "any"
+                },
+                "endTime": {
                   "example": "any"
                 },
                 "schedule": {
@@ -169,7 +173,10 @@
                 "location": {
                   "example": "any"
                 },
-                "time": {
+                "startTime": {
+                  "example": "any"
+                },
+                "endTime": {
                   "example": "any"
                 },
                 "schedule": {
